# nihilism

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  docker-compose.yml
client/: index.html  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css
src/: config.rs  endings.rs  game.rs  llm.rs  main.rs  persistence.rs  routes.rs
